<resources>
    <string name="app_name">Sales</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <integer name="weight_60">60</integer>
    <integer name="weight_sum">100</integer>
    <integer name="weight_50">50</integer>
    <integer name="weight_80">80</integer>
    <integer name="weight_20">20</integer>

    <string name="title_receipts">"Receipts"</string>
    <string name="title_sales">Sales</string>
    <string name="title_items">Items</string>
    <string name="title_customers">Customers</string>
    <string name="title_settings">Settings</string>
    <string name="title_add_customer">Add customer</string>

    <string name="search_view_hint_sales">Search sale items</string>
    <string name="search_view_hint_items">Search all items</string>
    <string name="search_view_hint_customers">Search customers</string>
    <string name="search_view_hint_receipts">Search receipts</string>
    <string name="textViewCartTotal">Cart Total</string>
    <string name="hint_cart_amount">000,000,000,000</string>

    <string name="no_items_found">No items found</string>
    <string name="error_parsing_response">Error parsing response</string>
    <string name="items_toolbar_title">Items</string>
    <string name="customers_toolbar_title">Customers</string>
    <string name="settings_toolbar_title">Settings</string>
    <string name="sales_toolbar_title">Sales</string>
    <string name="receipts_toolbar_title">Receipts</string>
    <string name="title_adding_customer">Adding customer</string>
    <string name="title_shopping_cart">Shopping cart</string>
    <string name="title_editing_item">Editing item</string>
    <string name="button_save_customer">Save Customer</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>
    <string name="hint_business_name">Business name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="clear">clear cart</string>
    <string name="add_customer">add customer</string>
    <string name="sync">sync</string>
    <string name="save_changes_button">save changes</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_rate">Rate</string>
    <string name="hint_total">Total</string>
    <string name="hint_pay">Pay</string>

    <string name="title_select_customer">Select customer</string>

    <string name="button_save_route">Save Route</string>

    <string name="title_routes">Routes</string>
    <string name="title_add_route">Add route</string>
    <string name="title_printers">Printers</string>
    <string name="title_add_printer">Add printer</string>
    <string name="title_general_settings">General settings</string>
    <string name="hint_route_name">Route name</string>

    <string name="date_label">Date:</string>
    <string name="customer_label">Customer:</string>

</resources>