<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_view_and_add_customers"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.appbar.AppBarLayout
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        android:theme="@style/Theme.Sales.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/sales_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:elevation="0dp"
            app:popupTheme="@style/Theme.Sales.AppBarOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/layout_top_marin"
        android:layout_marginLeft="@dimen/left_and_right_margin"
        android:layout_marginRight="@dimen/left_and_right_margin"
        android:id="@+id/out_layout"
        android:orientation="vertical"
        tools:context=".SalesFragment">

        <LinearLayout
            android:id="@+id/cartTotalDisplay"
            android:background="@color/grey_200"
            android:orientation="vertical"
            android:visibility="visible"
            android:padding="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:id="@+id/amountTotalText2"
                android:layout_gravity="start"
                android:orientation="vertical"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/amountText3"
                    android:text="@string/textViewCartTotal"
                    android:textStyle="bold"
                    android:layout_gravity="start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/amount"
                    android:hint="@string/hint_cart_amount"
                    android:textStyle="bold"
                    android:textSize="24dp"
                    android:background="@null"
                    android:focusableInTouchMode="false"
                    android:layout_gravity="start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchSaleProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cartTotalDisplay"
            android:layout_marginLeft="@dimen/left_and_right_margin"
            android:layout_marginRight="@dimen/left_and_right_margin"
            android:textColor="@color/white"
            android:background="@color/grey_400"
            app:iconifiedByDefault="false"
            app:popupTheme="@style/Theme.Sales.PopupOverlay"
            app:queryHint="@string/search_view_hint_sales"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/createSaleInventoryRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/searchSaleProducts"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="@dimen/left_and_right_margin"
            android:layout_marginRight="@dimen/left_and_right_margin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.09" />

    </RelativeLayout>


</LinearLayout>